--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
         <!--Background elements-->
         <div class="after"></div>
-        <video src="./videos//bg1.mp4" muted autoplay loop></video>
+        <video src="../videos//bg1.mp4" muted autoplay loop></video>
     </section>
 
     <!--JS file-->
