--- a/training.html
+++ b/training.html
@@ -70,7 +70,7 @@
 
         <!--Background elements-->
         <div class="after"></div>
-        <video src="../videos//bg3.mp4" class="flip" muted autoplay loop></video>
+        <video src="../videos//bg3.MP4" class="flip" muted autoplay loop></video>
     </section>
 
     <!--JS file-->
