--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
 
         <!--Background elements-->
         <div class="after"></div>
-        <video src="../videos//bg2.MP4" muted autoplay loop></video>
+        <video src="/videos//bg2.mp4" muted autoplay loop></video>
     </section>
 
     <!--JS file-->
